# cmake-sdl2-windows

./: CMakeLists.txt  README.txt
src/: main.c
